slurm/k8s_mega_v2/practice/11.deploy/a-b/stable-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
    release: stable
  name: myapp-stable
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: myapp
    release: stable
  type: ClusterIP
